# hpc-project

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README  README.md  cluster_cmd.sh  mst_common.hpp  mst_visualization.hpp
.zed/: debug.json  settings.json  tasks.json
cuda/: boruvka_kernels.cuh  device_dsu.cuh  main.cu
include/mst/app/: backend_app.hpp  config.hpp  graph_selection.hpp
include/mst/boruvka/: backend.hpp  contracts.hpp  sequential_verifier.hpp
include/mst/core/: edge.hpp  graph.hpp  graph_examples.hpp  summary.hpp  types.hpp
include/mst/dsu/: disjoint_set.hpp  parallel_disjoint_set.hpp
include/mst/execution/: domain.hpp
include/mst/memory/: buffer.hpp
include/mst/reporting/: json_report.hpp
include/mst/visualization/: render_graph.hpp
mpi/: CMakeLists.txt  main.cpp
old/: CMakeLists.txt  CMakePresets.json
old/cuda/: CMakeLists.txt  device_dsu.cuh  main.cu
old/include/mst/app/: backend_app.hpp  config.hpp  graph_selection.hpp
old/include/mst/boruvka/: backend.hpp
old/include/mst/core/: edge.hpp  graph_examples.hpp  summary.hpp
old/include/mst/dsu/: parallel_disjoint_set.hpp
old/include/mst/memory/: buffer.hpp
old/include/mst/reporting/: json_report.hpp
old/include/mst/visualization/: render_graph.hpp
old/mpi/: CMakeLists.txt  main.cpp
old/openmp/: main.cpp
old/scripts/slurm/: cuda.sh  openmp.sh
openmp/: CMakeLists.txt  main.cpp
report/: _prelude.typ  data.typ  figures.typ  main.typ
scripts/: run_benchmark.sh  sync_project_to_server.sh  sync_results_from_server.sh
scripts/slurm/: build.sh  cuda.sh  mpi.sh  openmp.sh  sequential.sh  submit_all.sh
src/: cuda.cu  mpi.cpp  openmp.cpp  sequential.cpp
tests/: core_tests.cpp
