cmake_minimum_required(VERSION 4.3)

project(hpc_project LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(APPLE)
  set(MST_OPENMP_PREFIX_HINTS)
  if(DEFINED ENV{HOMEBREW_PREFIX})
    list(APPEND MST_OPENMP_PREFIX_HINTS "$ENV{HOMEBREW_PREFIX}/opt/libomp")
  endif()
  list(APPEND MST_OPENMP_PREFIX_HINTS "/opt/homebrew/opt/libomp" "/usr/local/opt/libomp")
  foreach(openmp_prefix IN LISTS MST_OPENMP_PREFIX_HINTS)
    if(IS_DIRECTORY "${openmp_prefix}")
      list(PREPEND CMAKE_PREFIX_PATH "${openmp_prefix}")
    endif()
  endforeach()
endif()

add_executable(sequential_app src/sequential.cpp)

find_package(OpenMP COMPONENTS CXX QUIET)
if(OpenMP_CXX_FOUND)
  set(MST_OPENMP_STATUS "found; building openmp_app")
  add_executable(openmp_app src/openmp.cpp)
  target_link_libraries(openmp_app PRIVATE OpenMP::OpenMP_CXX)
else()
  set(MST_OPENMP_STATUS "not found; skipping openmp_app")
endif()

find_package(MPI COMPONENTS CXX QUIET)
if(MPI_CXX_FOUND)
  set(MST_MPI_STATUS "found; building mpi_app")
  add_executable(mpi_app src/mpi.cpp)
  target_link_libraries(mpi_app PRIVATE MPI::MPI_CXX)
else()
  set(MST_MPI_STATUS "not found; skipping mpi_app")
endif()

include(CheckLanguage)
check_language(CUDA)
if(CMAKE_CUDA_COMPILER)
  enable_language(CUDA)
  set(MST_CUDA_STATUS "found; building cuda_app")
  add_executable(cuda_app src/cuda.cu)
  set_target_properties(cuda_app PROPERTIES CUDA_STANDARD 17)
else()
  set(MST_CUDA_STATUS "not found; skipping cuda_app")
endif()

message(STATUS "MST backend detection:")
message(STATUS "  OpenMP: ${MST_OPENMP_STATUS}")
message(STATUS "  MPI:    ${MST_MPI_STATUS}")
message(STATUS "  CUDA:   ${MST_CUDA_STATUS}")
